v3 api - Exit from Group Chat
